--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
   intl: ^0.19.0
+  sticky_headers: ^0.3.0+2
+  provider: ^6.1.1
+  grouped_list: ^5.1.2
+  sticky_grouped_list: ^3.1.0
+  week_of_year: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/images/categories/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
