--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   grouped_list: ^5.1.2
   sticky_grouped_list: ^3.1.0
   week_of_year: ^2.2.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
