--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^6.0.3
   sign_in_with_apple: ^5.0.0
+  flutter_markdown: ^0.6.18+3
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/categories/
+    - assets/texts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
