--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: shared_budget_book
+name: earnedon
 description: 'A new Flutter project.'
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -50,6 +50,8 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   flutter_markdown: ^0.6.18+3
   font_awesome_flutter: ^10.6.0
+  fl_chart: ^0.66.0
+  firebase_dynamic_links: ^5.4.8
 
 dev_dependencies:
   flutter_test:
