--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "shared_budget_book" "\0"
+            VALUE "FileDescription", "EarnedOn" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "shared_budget_book" "\0"
+            VALUE "InternalName", "EarnedOn" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "shared_budget_book.exe" "\0"
-            VALUE "ProductName", "shared_budget_book" "\0"
+            VALUE "OriginalFilename", "EarnedOn.exe" "\0"
+            VALUE "ProductName", "EarnedOn" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
